finished first half of html

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,38 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##### CODE TO PARSE THROUGH ALL NEWS ARTICLES #####\n",
-    "\n",
-    "# # HTML object\n",
-    "# html = browser.html\n",
-    "# # Parse HTML with Beautiful Soup\n",
-    "# soup = BeautifulSoup(html, 'html.parser')\n",
-    "# # Retrieve all elements that contain news information\n",
-    "# news = soup.find_all('div', class_='list_text')\n",
-    "\n",
-    "# # Iterate through each news article\n",
-    "# for article in news:\n",
-    "    \n",
-    "#     # Use Beautiful Soup's find() method to navigate and retrieve attributes\n",
-    "#     # Get the article title\n",
-    "#     content_title = article.find('div', class_=\"content_title\")\n",
-    "#     news_title = content_title.find('a').text\n",
-    "\n",
-    "#     # Get the article paragraph text\n",
-    "#     news_p = article.find('div', class_=\"article_teaser_body\").text\n",
-    "    \n",
-    "#     print('-'*25)\n",
-    "#     print(news_title)\n",
-    "#     print(news_p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -103,11 +72,11 @@
     "news = soup.find('div', class_='list_text')\n",
     "\n",
     "# Use Beautiful Soup's find() method to navigate and retrieve attributes\n",
-    "# Get the article title\n",
+    "# Get the news title\n",
     "content_title = news.find('div', class_=\"content_title\")\n",
     "news_title = content_title.find('a').text\n",
     "\n",
-    "# Get the article paragraph text\n",
+    "# Get the news paragraph text\n",
     "news_p = news.find('div', class_=\"article_teaser_body\").text\n",
     "\n",
     "print(news_title)\n",
@@ -123,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +284,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +316,7 @@
        "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>0</th>      <th>1</th>    </tr>  </thead>  <tbody>    <tr>      <th>0</th>      <td>Equatorial Diameter:</td>      <td>6,792 km</td>    </tr>    <tr>      <th>1</th>      <td>Polar Diameter:</td>      <td>6,752 km</td>    </tr>    <tr>      <th>2</th>      <td>Mass:</td>      <td>6.39 × 10^23 kg (0.11 Earths)</td>    </tr>    <tr>      <th>3</th>      <td>Moons:</td>      <td>2 (Phobos &amp; Deimos)</td>    </tr>    <tr>      <th>4</th>      <td>Orbit Distance:</td>      <td>227,943,824 km (1.38 AU)</td>    </tr>    <tr>      <th>5</th>      <td>Orbit Period:</td>      <td>687 days (1.9 years)</td>    </tr>    <tr>      <th>6</th>      <td>Surface Temperature:</td>      <td>-87 to -5 °C</td>    </tr>    <tr>      <th>7</th>      <td>First Record:</td>      <td>2nd millennium BC</td>    </tr>    <tr>      <th>8</th>      <td>Recorded By:</td>      <td>Egyptian astronomers</td>    </tr>  </tbody></table>'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,14 +348,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------------------\n",
       "Cerberus Hemisphere\n",
       "http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg\n",
       "-------------------\n",
@@ -398,7 +366,8 @@
       "-------------------\n",
       "Valles Marineris Hemisphere\n",
       "http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg\n",
-      "[{'title': 'Valles Marineris Hemisphere', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]\n"
+      "-------------------\n",
+      "[{'title': 'Cerberus Hemisphere', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}, {'title': 'Schiaparelli Hemisphere', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'}, {'title': 'Syrtis Major Hemisphere', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere', 'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]\n"
      ]
     }
    ],
@@ -412,7 +381,6 @@
     "\n",
     "# Create empty list to store dictionary containing all img titles and urls\n",
     "hemisphere_image_urls = []\n",
-    "mars_img_dict ={}\n",
     "\n",
     "# Iterate through each hemisphere link\n",
     "for result in results:\n",
@@ -436,24 +404,42 @@
     "    list_tag = downloads.find('li')\n",
     "    anchor_tag = list_tag.find('a')\n",
     "    img_url = anchor_tag['href']\n",
-    "\n",
+    "    \n",
+    "    mars_img_dict ={}\n",
     "    mars_img_dict['title'] = title\n",
     "    mars_img_dict['img_url'] = img_url\n",
     "    hemisphere_image_urls.append(mars_img_dict)\n",
     "    \n",
-    "    print('-------------------')\n",
     "    print(title)\n",
     "    print(img_url)\n",
+    "    print('-------------------')\n",
     "\n",
     "print(hemisphere_image_urls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_data = {\n",
+    "    \"hemisphere_image_urls\": hemisphere_image_urls\n",
+    "}\n",
+    "\n",
+    "mars_data['hemisphere_image_urls'][0]['img_url']"
+   ]
   },
   {
    "cell_type": "code",
