--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov//spaceimages/images/largesize/PIA23844_hires.jpg\n"
+      "/spaceimages/images/wallpaper/PIA22892-1920x1200.jpg\n",
+      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA22892-1920x1200.jpg\n"
      ]
     }
    ],
@@ -120,13 +121,15 @@
     "# Parse HTML with Beautiful Soup\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "# Retrieve all elements that contain the first mars picture information\n",
-    "mars_latest_pic = soup.find('li', class_=\"slide\")\n",
+    "mars_latest_pic = soup.find('article', class_=\"carousel_item\")\n",
     "\n",
-    "# Dissect the anchor which contains the img link\n",
-    "anchor = mars_latest_pic.find('a')\n",
-    "image_link = anchor['data-fancybox-href']\n",
-    "featured_image_url = ('https://www.jpl.nasa.gov/' + image_link)\n",
+    "# Dissect the article which contains the img link\n",
+    "background_img = mars_latest_pic['style']\n",
+    "image_url_split = background_img.split(\"'\",2)\n",
+    "image_link = image_url_split[1]\n",
+    "featured_image_url = ('https://www.jpl.nasa.gov' + image_link)\n",
     "\n",
+    "print(image_link)\n",
     "print(featured_image_url)"
    ]
   },
@@ -139,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +153,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InSight sol 500 (2020-04-22) low -93.8ºC (-136.8ºF) high -3.5ºC (25.6ºF)\n",
-      "winds from the WNW at 4.5 m/s (10.1 mph) gusting to 20.4 m/s (45.6 mph)\n",
+      "InSight sol 503 (2020-04-26) low -93.8ºC (-136.8ºF) high -4.9ºC (23.2ºF)\n",
+      "winds from the WNW at 4.6 m/s (10.2 mph) gusting to 17.5 m/s (39.1 mph)\n",
       "pressure at 6.70 hPa\n"
      ]
     }
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +287,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,23 +310,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>0</th>      <th>1</th>    </tr>  </thead>  <tbody>    <tr>      <th>0</th>      <td>Equatorial Diameter:</td>      <td>6,792 km</td>    </tr>    <tr>      <th>1</th>      <td>Polar Diameter:</td>      <td>6,752 km</td>    </tr>    <tr>      <th>2</th>      <td>Mass:</td>      <td>6.39 × 10^23 kg (0.11 Earths)</td>    </tr>    <tr>      <th>3</th>      <td>Moons:</td>      <td>2 (Phobos &amp; Deimos)</td>    </tr>    <tr>      <th>4</th>      <td>Orbit Distance:</td>      <td>227,943,824 km (1.38 AU)</td>    </tr>    <tr>      <th>5</th>      <td>Orbit Period:</td>      <td>687 days (1.9 years)</td>    </tr>    <tr>      <th>6</th>      <td>Surface Temperature:</td>      <td>-87 to -5 °C</td>    </tr>    <tr>      <th>7</th>      <td>First Record:</td>      <td>2nd millennium BC</td>    </tr>    <tr>      <th>8</th>      <td>Recorded By:</td>      <td>Egyptian astronomers</td>    </tr>  </tbody></table>'"
+       "'<table border=\"1\" class=\"dataframe\">  <tbody>    <tr>      <td>Equatorial Diameter:</td>      <td>6,792 km</td>    </tr>    <tr>      <td>Polar Diameter:</td>      <td>6,752 km</td>    </tr>    <tr>      <td>Mass:</td>      <td>6.39 × 10^23 kg (0.11 Earths)</td>    </tr>    <tr>      <td>Moons:</td>      <td>2 (Phobos &amp; Deimos)</td>    </tr>    <tr>      <td>Orbit Distance:</td>      <td>227,943,824 km (1.38 AU)</td>    </tr>    <tr>      <td>Orbit Period:</td>      <td>687 days (1.9 years)</td>    </tr>    <tr>      <td>Surface Temperature:</td>      <td>-87 to -5 °C</td>    </tr>    <tr>      <td>First Record:</td>      <td>2nd millennium BC</td>    </tr>    <tr>      <td>Recorded By:</td>      <td>Egyptian astronomers</td>    </tr>  </tbody></table>'"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Convert dataframe into html and removed new line (\\n) in code\n",
-    "mars_fact_html_table = mars_facts_df.to_html()\n",
+    "mars_fact_html_table = mars_facts_df.to_html(index=False, header=False)\n",
     "mars_fact_html_table = mars_fact_html_table.replace('\\n', '')\n",
     "mars_fact_html_table"
    ]
@@ -337,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +431,7 @@
        "'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,6 +442,16 @@
     "}\n",
     "\n",
     "mars_data['hemisphere_image_urls'][0]['img_url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Close the browser after scraping\n",
+    "browser.quit()"
    ]
   },
   {
